--- a/css/main.css
+++ b/css/main.css
@@ -174,4 +174,11 @@
   font-size: 32px;
   line-height: 109%;
   color: #fff;
+}
+
+.block_img06 {
+  width: 730px;
+  height: 304px;
+  position: absolute;
+  left: -222px;
 }/*# sourceMappingURL=main.css.map */
