--- a/sass/main.sass
+++ b/sass/main.sass
@@ -45,6 +45,7 @@ $font-family: "Montserrat", sans-serif
 
 .a_block
     color: #d9d9d9
+    transition: 0.5s
 
 .a_block:hover
     color: #d9d9d996
@@ -156,3 +157,132 @@ $font-family: "Montserrat", sans-serif
     height: 304px
     position: absolute
     left: -222px
+
+.slaid01_block
+    display: flex
+    justify-content: center
+    flex-direction: row-reverse
+
+.p_New_Our
+    padding-left: 72px
+    width: 457px
+
+.block_Cofffe
+    margin-right: 53px
+    display: flex
+    flex-direction: column
+    align-items: center
+    border-radius: 29px
+    width: 277px
+    height: 554px
+    border: 1px solid #6f7274
+
+.imgSlaid06
+    position: relative
+    bottom: 140px
+    width: 100%
+    z-index: 9
+
+.imgSlaid02
+    position: relative
+    bottom: 140px
+    width: 320px
+    right: 40px
+    z-index: 9
+
+.Opisanie_block
+    display: flex
+    height: 300px
+    flex-direction: column
+    align-items: center
+    width: 216px
+
+.h2_Fast
+    display: flex
+    justify-content: center
+    width: 100%
+    font-family: $font-family
+    font-weight: 500
+    font-size: 32px
+    line-height: 163%
+    letter-spacing: -0.02em
+    color: #fff
+    margin: 0px
+
+.Fast_p
+    margin: 13px 0px 12px 0px
+    width: 100%
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    line-height: 163%
+    letter-spacing: -0.02em
+    text-align: center
+    color: #d9d9d9
+
+.spanCountre
+    margin-right: 35px
+    font-family: $font-family
+    font-weight: 500
+    font-size: 32px
+    line-height: 163%
+    letter-spacing: -0.02em
+    color: #fff
+
+.spam_ml
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    line-height: 163%
+    letter-spacing: -0.02em
+    color: #d9d9d9
+
+.Span_counre_ml
+    display: flex
+    justify-content: center
+    align-items: center
+
+.img_blocl_coffe
+    display: flex
+    flex-direction: column
+    justify-content: center
+    width: 250px
+    height: 241px
+
+.btn_BuyProduct
+    border: none
+    margin-top: 30px
+    cursor: pointer
+    font-family: $font-family
+    font-weight: 639
+    font-size: 17px
+    line-height: 146%
+    letter-spacing: -0.02em
+    color: #fff
+    border-radius: 60px
+    width: 186px
+    height: 54px
+    background: linear-gradient(210deg, #237249 0%, #35c66b 100%)
+
+.btn_BuyProduct:hover
+    background: linear-gradient(210deg, #237249d5 0%, #35c66adc 100%)
+
+.imgSlaid_Kryg
+    width: 290px
+    height: 290px
+    position: relative
+    top: 160px
+    right: 22px
+
+.four_block
+    display: flex
+
+.section_slaid01
+    margin-bottom: 97px
+
+.imgSlaid_Kryg02
+    width: 290px
+    height: 290px
+    position: relative
+    top: 180px
+    right: 22px
