--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,7 +4,7 @@ $font-family: "Montserrat", sans-serif
     background: #121517
     margin: 0px
 
-.main
+.header
     margin-top: 48px
 
 .nav
@@ -286,3 +286,189 @@ $font-family: "Montserrat", sans-serif
     position: relative
     top: 180px
     right: 22px
+
+.main
+    margin-top: 80px
+
+.One_block
+    width: 574px
+    height: 605px
+    margin-bottom: 112px
+
+.mainNew_Cafe
+    font-family: $font-family
+    font-weight: 800
+    font-size: 80px
+    line-height: 109%
+    letter-spacing: -0.03em
+    color: #fff
+    margin: 0px 0px 54px 0px
+
+.StarBucks_span
+    background: linear-gradient(223deg, #237249 0%, #35c66b 100%)
+    background-clip: text
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+
+.main_p
+    margin: 0px 0px 54px 0px
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    line-height: 163%
+    letter-spacing: -0.02em
+    color: #d9d9d9
+
+.block_two_btn
+    display: flex
+
+.Select_btn
+    margin-right: 17px
+    cursor: pointer
+    border: none
+    border-radius: 83px
+    width: 333px
+    height: 74px
+    font-family: $font-family
+    font-weight: 639
+    font-size: 24px
+    line-height: 146%
+    letter-spacing: -0.02em
+    color: #fff
+    background: linear-gradient(210deg, #237249 0%, #35c66b 100%)
+
+.Select_btn:hover
+    background: linear-gradient(210deg, #237249d5 0%, #35c66adc 100%)
+
+.More_Btn
+    cursor: pointer
+    font-family: $font-family
+    font-weight: 400
+    font-size: 24px
+    line-height: 146%
+    letter-spacing: -0.03em
+    color: #d9d9d9
+    border-radius: 83px
+    width: 167px
+    height: 74px
+    background: #121517
+    border: 1px solid #6f7274
+
+.block_Three
+    margin-top: 55px
+    display: flex
+    width: 472px
+    height: 126px
+
+.k_Block
+    width: 126px
+    margin-right: 50px
+
+.k9
+    margin: 0px
+    font-family: $font-family
+    font-weight: 400
+    font-size: 62px
+    line-height: 109%
+    letter-spacing: -0.03em
+    color: #fff
+
+.Span_plus
+    background: linear-gradient(244deg, #237249 0%, #35c66b 100%)
+    background-clip: text
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+
+.Premium_Users
+    margin: 0px
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    line-height: 144%
+    letter-spacing: -0.02em
+    color: #d9d9d9
+
+.Two_block
+    margin-left: 155px
+
+.All_block
+    display: flex
+
+.Two_block
+    width: 450px
+    height: 605px
+
+.Main_imgCoffe
+    width: 100%
+    position: relative
+    z-index: 5
+
+.Plus_block
+    position: relative
+    z-index: 10
+    width: 142px
+    bottom: 650px
+    left: 250px
+
+.Block_wehave_main
+    display: flex
+    justify-content: center
+    margin-bottom: 135px
+
+.Block_wehave
+    position: relative
+    z-index: 8
+    display: flex
+    justify-content: center
+    align-items: baseline
+    border-radius: 46px
+    width: 1029px
+    height: 372px
+    background: linear-gradient(230deg, #fff 3.94%, #e5e5e5 64.08%, #fbfbfb 88.62%)
+
+.heart_Block
+    width: 226px
+    height: 296px
+    margin-right: 60px
+
+.Tasty
+    display: flex
+    justify-content: center
+    margin-top: 0px
+    margin-bottom: 8px
+    font-family: $font-family
+    font-weight: 500
+    font-size: 32px
+    line-height: 163%
+    letter-spacing: -0.02em
+    color: #121517
+
+.P_We_hav
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    line-height: 163%
+    letter-spacing: -0.02em
+    text-align: center
+    color: rgba(18, 21, 23, 0.9)
+
+.heart_div
+    display: flex
+    justify-content: center
+
+.rocket
+    position: relative
+    top: 33px
+    right: 22px
+
+.Bloock_Star
+    width: 1200px
+    top: 900px
+    bottom: 50px
+    position: absolute
+    z-index: 9
+
+.line_coffe
+    position: absolute
+    right: 1px
+    top: 400px
