--- a/sass/main.sass
+++ b/sass/main.sass
@@ -472,3 +472,6 @@ $font-family: "Montserrat", sans-serif
     position: absolute
     right: 1px
     top: 400px
+
+.absolut_block
+    display: none
