--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,4 +1,10 @@
 @media ( max-width: 1300px )
+    .Bloock_Star
+        width: 100%
+
+    .All_block
+        padding-left: 25px
+
     .block_swiperBottom
         padding-left: 80px
 
@@ -18,6 +24,27 @@
         padding-left: 80px
 
 @media ( max-width: 1200px )
+    .One_block
+        margin-bottom: 0px
+    .Bloock_Star
+        display: none
+
+    .Two_block
+        margin-left: 0px
+
+    .mainNew_Cafe
+        font-size: 60px
+
+    .Main_imgCoffe
+        width: 400px
+
+    .line_mini
+        width: 550px
+
+    .Plus_block
+        bottom: 590px
+        left: 210px
+
     .block_img06
         display: none
 
@@ -28,6 +55,35 @@
         padding-left: 80px
 
 @media ( max-width: 1130px )
+    .One_block
+        width: 510px
+
+    .k_Block
+        width: 84px
+        height: 79px
+
+    .Select_btn
+        font-size: 17px
+        width: 223px
+        height: 50px
+
+    .More_Btn
+        width: 112px
+        height: 50px
+        font-size: 16px
+
+    .Premium_Users
+        font-size: 13px
+
+    .k9
+        font-size: 41px
+
+    .mainNew_Cafe
+        font-size: 48px
+
+    .main_p
+        font-size: 20px
+
     .H2_Our_New
         padding-left: 80px
         font-size: 53px
@@ -36,7 +92,107 @@
         flex-direction: column-reverse
         align-items: flex-start
 
+@media ( max-width: 917px )
+    .heart_Block
+        margin-right: 0px
+
+    .One_block
+        width: 390px
+
+@media ( max-width: 833px )
+    .Plus_block
+        bottom: 500px
+        left: 200px
+
+    .Main_imgCoffe
+        width: 350px
+
+@media ( max-width: 780px )
+    .line_coffe
+        display: none
+
+    .main_p
+        font-size: 12px
+
+    .line_mini
+        width: 400px
+
+    .Main_imgCoffe
+        width: 270px
+
+    .Plus_block
+        left: 120px
+        bottom: 400px
+
 @media ( max-width: 700px )
+    .absolut_block
+        width: 700px
+        display: block
+        position: absolute
+        z-index: 10
+        bottom: -170px
+        top: -33px
+
+    .section_slaid01
+        margin-top: 320px
+
+    .heart_Block_Many
+        margin-left: 44px
+
+    .P_We_hav
+        margin-left: 33px
+        width: 111px
+        font-size: 11px
+
+    .Tasty
+        font-size: 18px
+
+    .heart
+        width: 85px
+        height: 89px
+
+    .rocket
+        width: 121px
+        height: 118px
+
+    .heart_Block
+        display: flex
+        flex-direction: column
+        justify-content: center
+        transform: rotate(-90deg)
+        width: 169px
+        height: 104px
+
+    .Block_wehave
+        display: flex
+        align-items: center
+        justify-content: flex-start
+        width: 602px
+        height: 218px
+
+    .Block_wehave_main
+        margin-top: 120px
+        transform: rotate(90deg)
+        margin-bottom: 0px
+
+    .main
+        margin-top: 30px
+
+    .Two_block
+        padding-left: 50px
+        width: 340px
+        height: 381px
+
+    .block_Three
+        width: 340px
+
+    .line_coffe
+        display: none
+
+    .All_block
+        padding-left: 80px
+        flex-direction: column-reverse
+
     .imgSlaid_Kryg02
         width: 170px
         left: 0px
@@ -141,3 +297,7 @@
 
     .P_TWOINST
         margin-bottom: 8px
+
+@media ( max-width: 500px )
+    .All_block
+        padding-left: 25px
