--- a/sass/media.sass
+++ b/sass/media.sass
@@ -88,6 +88,9 @@
         padding-left: 80px
         font-size: 53px
 
+    .We_make
+        font-size: 53px
+
     .block_OurNewEvents
         flex-direction: column-reverse
         align-items: flex-start
