section_one_media

--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,4 +1,7 @@
 @media ( max-width: 1300px )
+    .Con_block
+        padding-left: 25px
+
     .Bloock_Star
         width: 100%
 
@@ -95,6 +98,37 @@
         flex-direction: column-reverse
         align-items: flex-start
 
+@media ( max-width: 1000px )
+    .line_Two
+        width: 700px
+        height: 500px
+
+    .WeHere_block
+        width: 350px
+
+    .WeHere_Two
+        width: 350px
+
+    .btn_Start
+        font-size: 15px
+        width: 210px
+        height: 50px
+
+    .Stars_IMG
+        width: 150px
+        height: 150px
+        left: 200px
+
+    .table_img
+        width: 400px
+        height: 614px
+        right: 320px
+        top: 1px
+
+    .green_img
+        width: 300px
+        height: 530px
+
 @media ( max-width: 917px )
     .heart_Block
         margin-right: 0px
@@ -111,6 +145,14 @@
         width: 350px
 
 @media ( max-width: 780px )
+    .line_Two
+        top: 1400px
+        width: 900px
+        height: 700px
+
+    .Con_block
+        flex-direction: column
+
     .line_coffe
         display: none
 
@@ -128,6 +170,14 @@
         bottom: 400px
 
 @media ( max-width: 700px )
+    .section_Two
+        margin-bottom: 0px
+    .line_Two
+        top: 1800px
+
+    .section_Two
+        margin-top: 300px
+
     .absolut_block
         width: 700px
         display: block
@@ -137,7 +187,7 @@
         top: -33px
 
     .section_slaid01
-        margin-top: 320px
+        margin-top: 0px
 
     .heart_Block_Many
         margin-left: 44px
