--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,7 @@
 @media (max-width: 1300px) {
+  .Con_block {
+    padding-left: 25px;
+  }
   .Bloock_Star {
     width: 100%;
   }
@@ -99,6 +102,38 @@
     align-items: flex-start;
   }
 }
+@media (max-width: 1000px) {
+  .line_Two {
+    width: 700px;
+    height: 500px;
+  }
+  .WeHere_block {
+    width: 350px;
+  }
+  .WeHere_Two {
+    width: 350px;
+  }
+  .btn_Start {
+    font-size: 15px;
+    width: 210px;
+    height: 50px;
+  }
+  .Stars_IMG {
+    width: 150px;
+    height: 150px;
+    left: 200px;
+  }
+  .table_img {
+    width: 400px;
+    height: 614px;
+    right: 320px;
+    top: 1px;
+  }
+  .green_img {
+    width: 300px;
+    height: 530px;
+  }
+}
 @media (max-width: 917px) {
   .heart_Block {
     margin-right: 0px;
@@ -117,6 +152,14 @@
   }
 }
 @media (max-width: 780px) {
+  .line_Two {
+    top: 1400px;
+    width: 900px;
+    height: 700px;
+  }
+  .Con_block {
+    flex-direction: column;
+  }
   .line_coffe {
     display: none;
   }
@@ -135,6 +178,15 @@
   }
 }
 @media (max-width: 700px) {
+  .section_Two {
+    margin-bottom: 0px;
+  }
+  .line_Two {
+    top: 1800px;
+  }
+  .section_Two {
+    margin-top: 300px;
+  }
   .absolut_block {
     width: 700px;
     display: block;
@@ -144,7 +196,7 @@
     top: -33px;
   }
   .section_slaid01 {
-    margin-top: 320px;
+    margin-top: 0px;
   }
   .heart_Block_Many {
     margin-left: 44px;
