--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,7 @@
 @media (max-width: 1300px) {
+  .Our_Contacts {
+    padding-left: 25px;
+  }
   .Con_block {
     padding-left: 25px;
   }
@@ -61,6 +64,9 @@
   }
 }
 @media (max-width: 1130px) {
+  .line_Footer {
+    top: 4400px;
+  }
   .One_block {
     width: 510px;
   }
@@ -103,6 +109,16 @@
   }
 }
 @media (max-width: 1000px) {
+  .supercoffee {
+    font-size: 21px;
+  }
+  .line_Footer {
+    width: 1000px;
+  }
+  .img_insta {
+    width: 38px;
+    height: 38px;
+  }
   .line_Two {
     width: 700px;
     height: 500px;
@@ -132,6 +148,50 @@
   .green_img {
     width: 300px;
     height: 530px;
+  }
+}
+@media (max-width: 950px) {
+  .block_time {
+    margin: 0px;
+    width: 320px;
+  }
+  .Img_Our_Contacts {
+    width: 417px;
+    height: 500px;
+  }
+  .section_footer {
+    position: relative;
+    width: 100%;
+    height: 1100px;
+  }
+  .line_Footer {
+    top: 1px;
+    height: 674px;
+  }
+  .Block_Our_Contacts {
+    flex-direction: column-reverse;
+    position: relative;
+    top: 300px;
+  }
+  .p_OurNewEvents {
+    position: relative;
+    z-index: 15;
+  }
+  .Stars_footer_img {
+    width: 150px;
+    top: 1px;
+    right: 250px;
+  }
+  .StarBaks_img {
+    top: -390px;
+    position: relative;
+    width: 350px;
+    right: -22px;
+  }
+  .green_Footer_img {
+    width: 270px;
+    left: 100px;
+    top: 55px;
   }
 }
 @media (max-width: 917px) {
@@ -180,12 +240,10 @@
 @media (max-width: 700px) {
   .section_Two {
     margin-bottom: 0px;
+    margin-top: 200px;
   }
   .line_Two {
     top: 1800px;
-  }
-  .section_Two {
-    margin-top: 300px;
   }
   .absolut_block {
     width: 700px;
