--- a/sass/main.sass
+++ b/sass/main.sass
@@ -572,3 +572,60 @@ $font-family: "Montserrat", sans-serif
     letter-spacing: -0.03em
     color: #fff
     margin: 0px
+
+.Block_Our_Contacts
+    display: flex
+    justify-content: space-between
+    width: 100%
+    height: 617px
+
+.Our_Contacts
+    position: relative
+    width: 391px
+    height: 512px
+
+.Telefon_instogram
+    display: flex
+    align-items: center
+    margin-top: 28px
+
+.supercoffee
+    position: relative
+    z-index: 13
+    font-family: $font-family
+    font-weight: 500
+    font-size: 32px
+    line-height: 132%
+    color: #fff
+    width: 100%
+
+.img_insta
+    margin-right: 14px
+
+.Img_Our_Contacts
+    position: relative
+    width: 477px
+    height: 617px
+
+.green_Footer_img
+    position: relative
+    z-index: 9
+    top: 33px
+
+.StarBaks_img
+    position: absolute
+    z-index: 11
+    right: 120px
+    bottom: 15px
+
+.Stars_footer_img
+    position: absolute
+    z-index: 12
+    right: 350px
+    bottom: 420px
+
+.line_Footer
+    position: absolute
+    right: 0px
+    top: 4200px
+    width: 1300px
