--- a/sass/main.sass
+++ b/sass/main.sass
@@ -598,6 +598,7 @@ $font-family: "Montserrat", sans-serif
     line-height: 132%
     color: #fff
     width: 100%
+    text-decoration: none
 
 .img_insta
     margin-right: 14px
