--- a/sass/main.sass
+++ b/sass/main.sass
@@ -630,3 +630,91 @@ $font-family: "Montserrat", sans-serif
     right: 0px
     top: 4200px
     width: 1300px
+
+.footer
+    position: relative
+    z-index: 14
+    background: #0b0c0d
+    width: 100%
+    height: 490px
+
+.section_footer
+    margin-bottom: 50px
+
+.block_UL_logo
+    display: flex
+    padding-top: 60px
+    align-items: stretch
+    margin-bottom: 200px
+
+.StarBucks_footer
+    font-family: $font-family
+    font-weight: 800
+    font-size: 37px
+    line-height: 109%
+    letter-spacing: -0.03em
+    background: linear-gradient(223deg, #237249 0%, #35c66b 100%)
+    background-clip: text
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    margin-top: 0px
+    margin-right: 107px
+    width: 195px
+    cursor: pointer
+
+.Ul_Main
+    padding: 0px
+    list-style: none
+    margin-top: 0px
+    margin-right: 53px
+    width: 119px
+    height: 88px
+    padding-top: 15px
+
+.Main_li
+    cursor: pointer
+    margin-top: 0px
+    margin-bottom: 8px
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    letter-spacing: -0.01em
+    color: #bbb3b3
+
+.Buy_li
+    cursor: pointer
+    font-family: $font-family
+    font-weight: 400
+    font-size: 20px
+    letter-spacing: -0.01em
+    color: rgba(187, 179, 179, 0.43)
+    margin-bottom: 8px
+
+.Arrow_top
+    cursor: pointer
+    border: 1px solid #35C66B
+    border-radius: 29px
+    width: 84px
+    height: 85px
+    background: #ff000000
+    margin-left: 50px
+
+.Telrfon_Instogram
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+.h3_Telefon
+    font-family: $font-family
+    font-weight: 500
+    font-size: 26px
+    background: linear-gradient(245deg, #237249 0%, #35c66b 100%)
+    background-clip: text
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    text-decoration: none
+
+.instogtam
+    width: 46px
+    height: 46px
