--- a/css/main.css
+++ b/css/main.css
@@ -685,10 +685,9 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 32px;
-  line-height: 132%;
-  color: #fff;
-  width: 100%;
-  margin: 0px;
+  background: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-decoration: none;
 }
 
