--- a/sass/main.sass
+++ b/sass/main.sass
@@ -595,10 +595,9 @@ $font-family: "Montserrat", sans-serif
     font-family: $font-family
     font-weight: 500
     font-size: 32px
-    line-height: 132%
-    color: #fff
-    width: 100%
-    margin: 0px
+    background: #fff
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
     text-decoration: none
 
 .img_insta
