--- a/sass/main.sass
+++ b/sass/main.sass
@@ -700,7 +700,6 @@ $font-family: "Montserrat", sans-serif
     margin-left: 50px
 
 .Telrfon_Instogram
-    width: 100%
     display: flex
     justify-content: space-between
     align-items: center
@@ -718,3 +717,6 @@ $font-family: "Montserrat", sans-serif
 .instogtam
     width: 46px
     height: 46px
+
+.StarBucks_block
+    display: none
