--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,4 +1,23 @@
 @media ( max-width: 1300px )
+    .Arrow_top
+        margin-left: 0px
+        margin-bottom: 22px
+
+    .Buy_li
+        font-size: 15px
+
+    .Ul_Main
+        width: 90px
+
+    .Main_li
+        font-size: 15px
+
+    .block_UL_logo
+        padding-left: 25px
+
+    .Telrfon_Instogram
+        padding-left: 25px
+
     .Our_Contacts
         padding-left: 25px
 
@@ -30,8 +49,33 @@
         padding-left: 80px
 
 @media ( max-width: 1200px )
+    .block_UL_logo
+        padding-top: 0px
+        margin-bottom: 100px
+        justify-content: center
+
+    .Footer_Arraw_Block
+        padding-left: 25px
+        display: flex
+        justify-content: space-between
+        padding-top: 61px
+        align-items: center
+
+    .StarBucks_block
+        display: block
+
+    .StarBucks_none
+        display: none
+
+    .Telrfon_Instogram
+        padding-top: 88px
+
+    .footer
+        height: 600px
+
     .One_block
         margin-bottom: 0px
+
     .Bloock_Star
         display: none
 
@@ -408,6 +452,18 @@
 
     .P_TWOINST
         margin-bottom: 8px
+
+@media ( max-width: 600px )
+    .Arrow_top
+        width: 70px
+        height: 70px
+
+    .block_UL_logo
+        display: grid
+        grid-gap: 10px
+        grid-template-columns: repeat(auto-fill, minmax(100px, 2fr))
+        justify-content: center
+        margin-bottom: 0px
 
 @media ( max-width: 500px )
     .All_block
