--- a/sass/main.sass
+++ b/sass/main.sass
@@ -522,6 +522,7 @@ $font-family: "Montserrat", sans-serif
     position: relative
     z-index: 9
     width: 100%
+    border-radius: 22px
 
 .line_Two
     position: absolute
@@ -720,3 +721,7 @@ $font-family: "Montserrat", sans-serif
 
 .StarBucks_block
     display: none
+
+.video_block_play
+    opacity: 0
+    visibility: hidden
