--- a/sass/media.sass
+++ b/sass/media.sass
@@ -49,6 +49,85 @@
         padding-left: 80px
 
 @media ( max-width: 1200px )
+    .logo
+        margin-right: 0px
+    // бургер меню 
+    .nav
+        position: relative
+        justify-content: space-between
+        align-items: center
+
+    .menu_burger
+        display: block
+        z-index: 20
+        position: relative
+        width: 42px
+        height: 20px
+        cursor: pointer
+        margin-right: 25px
+
+    .menu_burger span,
+    .menu_burger::before,
+    .menu_burger::after
+        left: 0
+        position: absolute
+        height: 10%
+        width: 100%
+        transition: all 0.3s ease 0s
+        background: linear-gradient(210deg, #237249 0%, #35c66b 100%)
+
+    .menu_burger::before,
+    .menu_burger::after
+        content: ""
+
+    .menu_burger::before
+        top: 0
+
+    .menu_burger::after
+        bottom: 0
+
+    .menu_burger span
+        top: 50%
+        transform: scale(1) translate(0px, -50%)
+
+    // анимация
+    .menu_burger._active span
+        transform: scale(0) translate(0px, -50%)
+
+    .menu_burger._active::before
+        top: 50%
+        transform: rotate(-45deg) translate(0px, -50%)
+
+    .menu_burger._active::after
+        bottom: 50%
+        transform: rotate(45deg) translate(0px, 50%)
+
+    // внутри бургера 
+    .ul_block
+        flex-direction: column
+        position: fixed
+        top: 0
+        left: -100%
+        width: 100%
+        height: 100%
+        transition: left 0.3s ease 0s
+        background: #121517
+        z-index: 19
+        margin-top: 0px
+        padding: 200px 5px 5px 5px
+
+    .ul_block._active
+        left: 0px
+
+    .li_block
+        margin-right: 0px
+        margin-bottom: 32px
+        font-size: 25px
+
+    .a_block
+        font-size: 25px
+    // 
+
     .block_UL_logo
         padding-top: 0px
         margin-bottom: 100px
@@ -96,9 +175,6 @@
         left: 210px
 
     .block_img06
-        display: none
-
-    .ul_block
         display: none
 
     .Block_p_OurNewEvents
