--- a/sass/media.sass
+++ b/sass/media.sass
@@ -114,7 +114,7 @@
         background: #121517
         z-index: 19
         margin-top: 0px
-        padding: 200px 5px 5px 5px
+        padding-top: 200px
 
     .ul_block._active
         left: 0px
@@ -135,6 +135,7 @@
 
     .Footer_Arraw_Block
         padding-left: 25px
+        padding-right: 25px
         display: flex
         justify-content: space-between
         padding-top: 61px
@@ -148,6 +149,7 @@
 
     .Telrfon_Instogram
         padding-top: 88px
+        margin-right: 25px
 
     .footer
         height: 600px
